--- a/app/src/main/res/layout/fragment_webview.xml
+++ b/app/src/main/res/layout/fragment_webview.xml
@@ -59,8 +59,7 @@
         android:layout_above="@+id/lay_bottomBar"
         android:layout_below="@+id/lay_topBar" />
 
-    <com.edmodo.cropper.CropImageView
-        xmlns:custom="http://schemas.android.com/apk/res-auto"
+    <com.edmodo.cropper.CropImageView xmlns:custom="http://schemas.android.com/apk/res-auto"
         android:id="@+id/img_screenshot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
