--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -72,7 +72,6 @@
                         android:layout_gravity="center_vertical"
                         android:adjustViewBounds="true"
                         android:scaleType="fitCenter"
-                        android:src="@drawable/linkit"
                         android:padding="0dp" />
 
                 </RelativeLayout>
@@ -97,7 +96,7 @@
                 <ams.android.linkitmerchant.Tools.ClearableEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="New Text"
+                    android:text="editor"
                     android:id="@+id/etxtDesc"
                     android:textSize="14dp"
                     android:paddingLeft="5dp"
@@ -109,7 +108,24 @@
                     android:singleLine="true"
                     android:imeOptions="actionDone"
                     android:textColor="#1F1F21"
-                    android:background="#00ffffff" />
+                    android:background="#00ffffff"
+                    android:visibility="invisible" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="5dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="5dp"
+                    android:paddingBottom="10dp"
+                    android:maxLength="46"
+                    android:textSize="14dp"
+                    android:textColor="#1F1F21"
+                    android:background="#00ffffff"
+                    android:singleLine="true"
+                    android:text="static text"
+                    android:id="@+id/txtDescFix"
+                    android:hint="Set some description about product" />
 
             </RelativeLayout>
 
