--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,6 @@
     android:id="@+id/container"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/backrepeat"
     tools:context=".MainActivity"
-    tools:ignore="MergeRootFrame"
-    android:background="@drawable/backrepeat" />
+    tools:ignore="MergeRootFrame" />
