--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -19,15 +19,30 @@
         android:layout_alignParentTop="true"
         android:layout_above="@+id/imgIntro" />
 
+    <ProgressBar
+        android:id="@+id/progressBar_load"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="4dp"
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:indeterminate="true"
+        android:max="100"
+        android:progress="50" />
+
     <ImageView
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imgRefresh"
         android:layout_centerHorizontal="true"
         android:layout_alignTop="@+id/webViewLogin"
-        android:layout_alignBottom="@+id/webViewLogin"
         android:src="@drawable/refresh"
-        android:scaleType="centerInside" />
+        android:scaleType="centerInside"
+        android:layout_alignRight="@+id/webViewLogin"
+        android:visibility="visible"
+        android:layout_margin="5dp"
+        android:clickable="true" />
 
     <ImageView
         android:layout_width="fill_parent"
