--- a/app/src/main/res/layout/fragment_webview.xml
+++ b/app/src/main/res/layout/fragment_webview.xml
@@ -73,59 +73,63 @@
         android:layout_alignBottom="@+id/webView_Content"
         android:layout_alignTop="@+id/webView_Content" />
 
+
     <RelativeLayout
+        android:id="@+id/lay_bottomBar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lay_bottomBar"
-        android:gravity="clip_vertical"
-        android:paddingLeft="20dp"
-        android:paddingTop="0dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="0dp"
-        android:background="#f6f6f6"
         android:layout_alignParentBottom="true"
-        android:clickable="true">
+        android:background="#f6f6f6"
+        android:clickable="true"
+        android:gravity="clip_vertical"
+        android:paddingBottom="2dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="20dp"
+        android:paddingTop="2dp">
 
         <ImageView
+            android:id="@+id/img_insta_preview"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:adjustViewBounds="false"
+            android:baselineAlignBottom="false"
+            android:cropToPadding="false"
+            android:padding="0dp"
+            android:scaleType="fitCenter"
+            android:layout_alignBottom="@+id/btn_capture"
+            android:layout_alignTop="@+id/btn_capture" />
+
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/img_insta_preview"
-            android:layout_alignParentLeft="true"
-            android:layout_alignTop="@+id/btn_capture"
-            android:layout_alignBottom="@+id/btn_capture"
-            android:adjustViewBounds="false"
-            android:scaleType="fitCenter"
-            android:padding="0dp"
-            android:layout_alignParentStart="true"
-            android:cropToPadding="false"
-            android:baselineAlignBottom="false" />
+            android:layout_centerInParent="true">
 
-        <ImageButton
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:text="&lt;"
-            android:id="@+id/btn_back"
-            android:layout_marginRight="30dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/left"
-            android:scaleType="fitCenter"
-            android:background="#00ffffff"
-            android:visibility="invisible"
-            android:layout_toRightOf="@+id/img_insta_preview"
-            android:layout_marginLeft="30dp" />
+            <ImageButton
+                android:id="@+id/btn_back"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_centerVertical="true"
+                android:background="#00ffffff"
+                android:scaleType="fitCenter"
+                android:src="@drawable/left"
+                android:text="&lt;"
+                android:visibility="visible"
+                android:layout_marginRight="50dp" />
 
-        <ImageButton
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:text=">"
-            android:id="@+id/btn_forward"
-            android:layout_toRightOf="@+id/btn_back"
-            android:layout_marginLeft="5dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/right"
-            android:background="#00ffffff"
-            android:scaleType="fitCenter"
-            android:visibility="invisible" />
+            <ImageButton
+                android:id="@+id/btn_forward"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_centerVertical="true"
+                android:background="#00ffffff"
+                android:scaleType="fitCenter"
+                android:src="@drawable/right"
+                android:text=">"
+                android:visibility="visible" />
+        </LinearLayout>
 
         <Button
             android:layout_width="wrap_content"
