--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -4,17 +4,14 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#00e5e5e5"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
-    android:paddingTop="5dp">
+    android:background="#00e5e5e5">
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        card_view:cardCornerRadius="6dp">
+    <!--<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
+        <!--android:id="@+id/card_view"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--card_view:cardCornerRadius="6dp">-->
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -22,23 +19,13 @@
             android:layout_margin="0dp">
 
             <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/layout_item_top"
-                android:paddingBottom="5dp">
-
-            </RelativeLayout>
-
-            <RelativeLayout
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
                 android:weightSum="100"
                 android:id="@+id/layout_item_images"
-                android:layout_alignParentTop="false"
-                android:layout_below="@+id/layout_item_top">
+                android:layout_alignParentTop="true"
+                android:layout_centerInParent="true">
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
@@ -90,8 +77,9 @@
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/layout_item_info"
                 android:layout_below="@+id/layout_item_images"
-                android:id="@+id/layout_item_info">
+                android:layout_alignParentTop="false">
 
                 <ams.android.linkitmerchant.Tools.ClearableEditText
                     android:layout_width="match_parent"
@@ -129,7 +117,20 @@
 
             </RelativeLayout>
 
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/layout_item_info"
+                android:paddingBottom="5dp">
+
+                <FrameLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:background="#d9d9d9"
+                    android:layout_alignParentBottom="false"></FrameLayout>
+            </RelativeLayout>
+
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    <!--</android.support.v7.widget.CardView>-->
 
 </RelativeLayout>
