--- a/app/src/main/res/layout/fragment_webview.xml
+++ b/app/src/main/res/layout/fragment_webview.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#cccccc">
+    android:background="#cccccc"
+    android:orientation="vertical"
+    android:touchscreenBlocksFocus="true"
+    android:id="@+id/lay_MainView"
+    android:clickable="true">
 
     <RelativeLayout
         android:layout_width="fill_parent"
