--- a/app/src/main/res/layout/fragment_links.xml
+++ b/app/src/main/res/layout/fragment_links.xml
@@ -5,6 +5,68 @@
     android:background="#0000"
     tools:context=".MainActivity$PlaceholderFragment">
 
+    <RelativeLayout
+        android:id="@+id/layout_main_bar"
+        android:layout_width="fill_parent"
+        android:layout_height="42dp"
+        android:background="#F9FFFFFF">
+
+        <ImageButton
+            android:id="@+id/btn_instagram"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentRight="false"
+            android:layout_centerVertical="true"
+            android:adjustViewBounds="true"
+            android:background="#0000"
+            android:padding="10dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/instagram"
+            android:layout_alignParentLeft="true" />
+
+        <ImageView
+            android:id="@+id/img_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:adjustViewBounds="true"
+            android:padding="5dp"
+            android:src="@drawable/linkit" />
+
+        <ImageButton
+            android:id="@+id/btn_logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:adjustViewBounds="true"
+            android:background="#0000"
+            android:padding="10dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/logout" />
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:background="#cccccc"
+            android:orientation="horizontal"></LinearLayout>
+
+    </RelativeLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtEmptyInfo"
+        android:layout_below="@+id/layout_main_bar"
+        android:layout_centerHorizontal="true"
+        android:text="As soon as you post new instagrams, they will appear here!"
+        android:textColor="#2191c1"
+        android:padding="5dp"
+        android:visibility="invisible" />
+
     <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe_container"
         android:layout_width="fill_parent"
@@ -41,43 +103,6 @@
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <RelativeLayout
-        android:id="@+id/layout_main_bar"
-        android:layout_width="fill_parent"
-        android:layout_height="42dp"
-        android:background="#F9FFFFFF">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:adjustViewBounds="true"
-            android:padding="5dp"
-            android:src="@drawable/linkit" />
-
-        <ImageButton
-            android:id="@+id/btn_logout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="false"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:adjustViewBounds="true"
-            android:background="#0000"
-            android:padding="5dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/logout" />
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:layout_alignParentBottom="true"
-            android:background="#cccccc"
-            android:orientation="horizontal"></LinearLayout>
-
-    </RelativeLayout>
-
-    <RelativeLayout
         android:id="@+id/lay_waiting"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -97,17 +122,6 @@
             android:indeterminate="true" />
 
     </RelativeLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtEmptyInfo"
-        android:layout_below="@+id/layout_main_bar"
-        android:layout_centerHorizontal="true"
-        android:text="As soon as you post new instagrams, they will appear here!"
-        android:textColor="#2191c1"
-        android:padding="5dp"
-        android:visibility="invisible" />
 
 
 </RelativeLayout>
