--- a/app/src/main/res/layout/fragment_webview.xml
+++ b/app/src/main/res/layout/fragment_webview.xml
@@ -28,12 +28,13 @@
             android:imeOptions="actionGo"
             android:textSize="14sp"
             android:drawableRight="@drawable/remove"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="false"
+            android:layout_alignParentEnd="false"
             android:textColor="#1F1F21"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="5dp" />
+            android:layout_marginBottom="5dp"
+            android:layout_toLeftOf="@+id/btnDone" />
 
         <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
@@ -48,6 +49,22 @@
             android:progress="50"
             android:indeterminate="true"
             android:layout_marginBottom="5dp" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:id="@+id/btnDone"
+            android:layout_alignParentRight="true"
+            android:textColor="#2191c1"
+            android:background="#00ffffff"
+            android:textSize="18sp"
+            android:padding="0dp"
+            android:layout_margin="0dp"
+            android:layout_centerVertical="true"
+            android:typeface="normal"
+            android:layout_alignBottom="@+id/etxtUrl"
+            android:layout_alignTop="@+id/etxtUrl" />
 
     </RelativeLayout>
 
