--- a/app/src/main/res/layout/fragment_webview.xml
+++ b/app/src/main/res/layout/fragment_webview.xml
@@ -79,6 +79,14 @@
         android:layout_above="@+id/lay_bottomBar"
         android:layout_below="@+id/lay_topBar" />
 
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/imgInstaPreviewFull"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"
+        android:src="@drawable/linkit512" />
+
     <com.edmodo.cropper.CropImageView xmlns:custom="http://schemas.android.com/apk/res-auto"
         android:id="@+id/img_screenshot"
         android:layout_width="wrap_content"
