--- a/app/src/main/res/layout/fragment_webview.xml
+++ b/app/src/main/res/layout/fragment_webview.xml
@@ -79,14 +79,6 @@
         android:layout_above="@+id/lay_bottomBar"
         android:layout_below="@+id/lay_topBar" />
 
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/imgInstaPreviewFull"
-        android:layout_centerInParent="true"
-        android:visibility="invisible"
-        android:src="@drawable/linkit512" />
-
     <com.edmodo.cropper.CropImageView xmlns:custom="http://schemas.android.com/apk/res-auto"
         android:id="@+id/img_screenshot"
         android:layout_width="wrap_content"
@@ -174,6 +166,16 @@
             android:typeface="normal" />
 
     </RelativeLayout>
+
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/imgInstaPreviewFull"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="false"
+        android:background="#88000000" />
 
     <RelativeLayout
         android:layout_width="fill_parent"
