--- a/app/src/main/res/layout/fragment_links.xml
+++ b/app/src/main/res/layout/fragment_links.xml
@@ -74,7 +74,7 @@
         android:layout_below="@+id/txtEmptyInfo">
 
 
-        <ams.android.linkitmerchant.Tools.myListView
+        <ams.android.linkitmerchant.Tools.customListView
             android:id="@+id/listView"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
