--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,136 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#00e5e5e5">
 
-    <!--<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
-        <!--android:id="@+id/card_view"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--card_view:cardCornerRadius="6dp">-->
+    <RelativeLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="100"
+        android:id="@+id/layout_item_images"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true">
 
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="0dp">
+            android:layout_toLeftOf="@+id/lay_center"
+            android:layout_alignParentLeft="true"
+            android:id="@+id/lay_insta">
 
-            <RelativeLayout
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
+            <ImageView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:weightSum="100"
-                android:id="@+id/layout_item_images"
-                android:layout_alignParentTop="true"
-                android:layout_centerInParent="true">
+                android:id="@+id/img_insta"
+                android:adjustViewBounds="true"
+                android:layout_gravity="center_vertical"
+                android:scaleType="fitCenter"
+                android:padding="0dp"
+                android:src="@drawable/loading" />
 
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/lay_center"
-                    android:layout_alignParentLeft="true"
-                    android:id="@+id/lay_insta">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/img_insta"
-                        android:adjustViewBounds="true"
-                        android:layout_gravity="center_vertical"
-                        android:scaleType="fitCenter"
-                        android:padding="0dp" />
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/lay_center"
-                    android:layout_alignParentRight="true"
-                    android:id="@+id/lay_link">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/img_link"
-                        android:layout_gravity="center_vertical"
-                        android:adjustViewBounds="true"
-                        android:scaleType="fitCenter"
-                        android:padding="0dp" />
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="0.5dp"
-                    android:layout_height="match_parent"
-                    android:layout_centerInParent="true"
-                    android:id="@+id/lay_center"
-                    android:layout_alignTop="@+id/lay_insta"
-                    android:layout_alignBottom="@+id/lay_insta"
-                    android:background="#999999"></RelativeLayout>
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/layout_item_info"
-                android:layout_below="@+id/layout_item_images"
-                android:layout_alignParentTop="false">
-
-                <ams.android.linkitmerchant.Tools.ClearableEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="editor"
-                    android:id="@+id/etxtDesc"
-                    android:textSize="14dp"
-                    android:paddingLeft="5dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="5dp"
-                    android:paddingBottom="10dp"
-                    android:hint="Set some description about product"
-                    android:maxLength="46"
-                    android:singleLine="true"
-                    android:imeOptions="actionDone"
-                    android:textColor="#1F1F21"
-                    android:background="#00ffffff"
-                    android:visibility="invisible" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="5dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="5dp"
-                    android:paddingBottom="10dp"
-                    android:maxLength="46"
-                    android:textSize="14dp"
-                    android:textColor="#1F1F21"
-                    android:background="#00ffffff"
-                    android:singleLine="true"
-                    android:text="static text"
-                    android:id="@+id/txtDescFix"
-                    android:hint="Set some description about product" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/layout_item_info"
-                android:paddingBottom="5dp">
-
-                <FrameLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="1dp"
-                    android:background="#d9d9d9"
-                    android:layout_alignParentBottom="false"></FrameLayout>
-            </RelativeLayout>
+            <ImageButton
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:id="@+id/btnDelete"
+                android:src="@drawable/delete"
+                android:background="#00000000"
+                android:padding="5dp"
+                android:layout_marginLeft="1dp"
+                android:layout_marginTop="1dp"
+                android:scaleType="centerInside"
+                android:layout_alignTop="@+id/img_insta"
+                android:adjustViewBounds="true"
+                android:visibility="gone" />
 
         </RelativeLayout>
-    <!--</android.support.v7.widget.CardView>-->
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/lay_center"
+            android:layout_alignParentRight="true"
+            android:id="@+id/lay_link">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/img_link"
+                android:layout_gravity="center_vertical"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:padding="0dp"
+                android:src="@drawable/loading" />
+
+            <ImageButton
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:id="@+id/btnUnMatch"
+                android:src="@drawable/unmatch"
+                android:background="#00000000"
+                android:padding="5dp"
+                android:layout_marginLeft="1dp"
+                android:layout_marginTop="1dp"
+                android:scaleType="centerInside"
+                android:layout_alignTop="@+id/img_link"
+                android:adjustViewBounds="true"
+                android:visibility="gone" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="0.5dp"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:id="@+id/lay_center"
+            android:layout_alignTop="@+id/lay_insta"
+            android:layout_alignBottom="@+id/lay_insta"
+            android:background="#999999"></RelativeLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/layout_item_info"
+        android:layout_below="@+id/layout_item_images"
+        android:layout_alignParentTop="false">
+
+        <ams.android.linkitmerchant.Tools.ClearableEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="editor"
+            android:id="@+id/etxtDesc"
+            android:textSize="14dp"
+            android:paddingLeft="5dp"
+            android:paddingTop="10dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="10dp"
+            android:hint="Set some description about product"
+            android:maxLength="46"
+            android:singleLine="true"
+            android:imeOptions="actionDone"
+            android:textColor="#1F1F21"
+            android:background="#00ffffff"
+            android:visibility="invisible" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:paddingTop="10dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="10dp"
+            android:maxLength="46"
+            android:textSize="14dp"
+            android:textColor="#1F1F21"
+            android:background="#00ffffff"
+            android:singleLine="true"
+            android:text="static text"
+            android:id="@+id/txtDescFix"
+            android:hint="Set some description about product" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/layout_item_info"
+        android:paddingBottom="5dp">
+
+        <FrameLayout
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="#d9d9d9"
+            android:layout_alignParentBottom="false"></FrameLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
